--- a/project/FE/src/index.html
+++ b/project/FE/src/index.html
@@ -5,9 +5,21 @@
   <title>Multi-choice Examination</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/image/icon-title.png">  
+  <link rel="icon" type="image/x-icon" href="assets/image/icon-title.png">
 </head>
 <body>
   <app-root></app-root>
+  <!--Start chat Script-->
+  <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+      var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+      s1.async=true;
+      s1.src='https://embed.tawk.to/5f66bb9c4704467e89f07f57/1eima2haq';
+      s1.setAttribute('crossorigin','*');
+      s0.parentNode.insertBefore(s1,s0);
+    })();
+  </script>
+  <!--End chat Script-->
 </body>
 </html>
